Changed some elements from flex to grid

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
     <mat-sidenav #drawer mode="over">
         <app-navigation></app-navigation>
     </mat-sidenav>
+
     <header>
         <mat-toolbar>
 
@@ -38,4 +39,29 @@
 
     </header>
     <router-outlet />
+    <footer>
+        <ul class="more">
+            <li class="pages">
+                <h2>Pages</h2>
+                <ul>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">All Collections</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms and Conditions</a></li>
+                </ul>
+            </li>
+            <li class="about-us">
+                <h2>About Us</h2>
+                <ul>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Whishlist</a></li>
+                    <li><a href="#">Shopping Cart</a></li>
+                    <li><a href="#">Shipping and Return</a></li>
+                    <li><a href="#">FAQ's</a></li>
+                </ul>
+            </li>
+        </ul>
+    </footer>
+
 </mat-sidenav-container>
