--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,7 @@
 @use '../base' as base;
 
+
 header {
-    position: sticky;
-    top: 0;
     z-index: 66;
     mat-toolbar {
         --mat-toolbar-standard-height: 120px;
@@ -85,6 +84,44 @@ header {
     }
 
 }
+
+footer {
+    width: 100%;
+    height: 250px;
+    background-color: base.$black;
+    margin-top: 16px;
+
+    .more {
+        list-style-type: none;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: space-evenly;
+
+        .pages, .about-us {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            h2 {
+                color: white;
+            }
+            ul{
+                display: flex;
+                flex-direction: column;
+                height: 60%;
+                justify-content: space-between;
+                a{
+                    color: gray;
+                    text-decoration: none;
+                    &:hover{
+                        color: base.$yellow;
+                    }
+                }
+            }
+        }
+    }
+}
+
 
 @media (max-width: 599px) {
     header {
