--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,17 +1,15 @@
 <div class="home-div">
     <section class="slideshow">
         <div class="first-image">Image Here</div>
-        <div class="half">
-            <div class="second-image">
-                <div>
-                    <h1>Get</h1>
-                    <h1 class="off">-50% <span>off</span></h1>
-                </div>
-                <img
-                    src="https://firebasestorage.googleapis.com/v0/b/tsshop-7a9e2.appspot.com/o/products%2F81GrCeuCzxL._AC_UL320_.jpg?alt=media&token=5c3f6496-de44-4bea-9dfc-96f17f8eba0e" />
+        <div class="second-image">
+            <div>
+                <h1>Get</h1>
+                <h1 class="off">-50% <span>off</span></h1>
             </div>
-            <div>Image Here</div>
+            <img
+                src="https://firebasestorage.googleapis.com/v0/b/tsshop-7a9e2.appspot.com/o/products%2F81GrCeuCzxL._AC_UL320_.jpg?alt=media&token=5c3f6496-de44-4bea-9dfc-96f17f8eba0e" />
         </div>
+        <div class="third-image">Image Here</div>
     </section>
 
     <h2 style="font-weight: 500; margin-top: 40px;">Top Sellers</h2>
@@ -27,6 +25,6 @@
             <li><app-product-item [product]="item"></app-product-item></li>
             }
         </ul>
-        
+
     </div>
 </div>
