--- a/src/app/product-page/product-page.component.scss
+++ b/src/app/product-page/product-page.component.scss
@@ -4,7 +4,7 @@ ul {
     display: flex;
     padding: 0 base.$padding 0;
     list-style-type: none;
-
+    gap: 2%;
     li {
         flex-basis: 50%;
         width: 50%;
@@ -13,17 +13,17 @@ ul {
     }
 
     .images-li {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        margin-right: base.$padding;
+        display: grid;
         border-radius: 8px;
         height: 70vh;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 1fr);
         gap: 2%;
         div {
-            width: calc(95% / 3);
+            width: 100%;
+            height: 100%;
             background-color: white;
-            height: 24%;
+            padding: 8px;
             img {
                 width: 100%;
                 height: 100%;
@@ -33,9 +33,11 @@ ul {
 
         .first-img {
             width: 100%;
-            height: 74%;
-            margin-top: 0;
-            padding: 8px;
+            height: 100%;
+            grid-column-start: 1;
+            grid-column-end: 4;
+            grid-row-start: 1;
+            grid-row-end: 3;
         }
     }
 
