--- a/src/app/shop/products/products.component.scss
+++ b/src/app/shop/products/products.component.scss
@@ -1,19 +1,13 @@
 .products {
-    display: flex;
+    display: grid;
     width: 100%;
-    flex-wrap: wrap;
-    justify-content: space-between;
-
-    .product-item {
-        flex-basis: 23%;
-        width: 23%;
-        margin-top: 16px;
-        flex-shrink: 1;
-    }
-
+    grid-template-columns: repeat(4, 1fr);
+    gap: 2%;
+    margin-top: 16px;
     li {
         width: 100%;
         align-content: center;
+
         p {
             text-align: center;
             padding: 16px;
@@ -22,11 +16,23 @@
 
 }
 
+
+
+@media only screen and (max-width: 975px) {
+    .products {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media only screen and (max-width: 700px) {
+    .products {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
 @media only screen and (max-width: 599px) {
     .products {
-        flex-direction: column;
-        .product-item{
-            width: 100%;
-        }
+        grid-template-columns: 1fr;
+
     }
 }
