--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -15,7 +15,9 @@
     </form>
 
     <div style="display: flex;">
-        <p>Don't Have An Account?</p> <a style="all: unset; font-weight: bold; margin-left: 4px; cursor: pointer;">Sign
+        <p>Don't Have An Account?</p>
+        <a style="all: unset; font-weight: bold; margin-left: 4px; cursor: pointer;"
+        routerLink="/signup" routerLinkActive="active">Sign
             Up</a>
     </div>
 </div>
