--- a/src/app/add-product/add-product.component.scss
+++ b/src/app/add-product/add-product.component.scss
@@ -1,7 +1,7 @@
 @use '../../base' as base;
 
 .add-product-div {
-    height: 100%;
+    height: 100vh;
     width: 100%;
     background-color: white;
     padding-left: base.$padding;
@@ -23,11 +23,7 @@
             flex-wrap: wrap;
             margin-top: 12px;
 
-            #inputFileZero,
-            #inputFileOne,
-            #inputFileTwo,
-            #inputFileThree,
-            #inputFileFour {
+            .input-file {
                 display: none;
             }
 
