--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,290 +1,269 @@
-@use '../base' as base;
-
+@use "../base" as base;
 
 header {
-    z-index: 66;
-    mat-toolbar {
-        --mat-toolbar-standard-height: 120px;
-        --mat-toolbar-container-background-color: white;
+  mat-toolbar {
+    --mat-toolbar-standard-height: 120px;
+    --mat-toolbar-container-background-color: white;
+    display: flex;
+    justify-content: space-between;
+    padding-left: base.$padding;
+    padding-right: base.$padding;
+
+    div {
+      .menu-a {
+        display: none;
+      }
+
+      .logo-div {
+        height: 100px;
+        width: 100px;
+        overflow: hidden;
         display: flex;
-        justify-content: space-between;
-        padding-left: base.$padding;
-        padding-right: base.$padding;
+        justify-content: center;
+        align-items: center;
 
-        div {
-            .menu-a {
-                display: none;
-            }
-
-            .logo-div {
-                height: 100px;
-                width: 100px;
-                overflow: hidden;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-
-                .logo-img {
-                    height: 90%;
-                    width: 90%;
-                    object-fit: contain;
-                }
-            }
+        .logo-img {
+          height: 90%;
+          width: 90%;
+          object-fit: contain;
         }
-
-        .search-div {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
-            &>input {
-                height: 32px;
-                width: 18rem;
-                outline: none;
-                border: 0.1px solid lightgray;
-                border-top-left-radius: 999px;
-                border-bottom-left-radius: 999px;
-                border-right-width: 0;
-                padding-left: 1rem;
-            }
-
-            .search-icon-div {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                background-color: #FFD701;
-                height: 32px;
-                width: 56px;
-                border: 0.1px solid lightgray;
-                border-top-right-radius: 999px;
-                border-bottom-right-radius: 999px;
-                border-left-width: 0;
-            }
-        }
-
-        .options-div {
-            display: flex;
-
-            &>div {
-                height: 40px;
-                width: 40px;
-                margin: 6px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                border: 0.1px solid gray;
-                border-radius: 999px;
-                overflow: hidden;
-
-                mat-icon {
-                    font-size: 24px;
-                }
-            }
-        }
+      }
     }
 
+    .search-div {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      & > input {
+        height: 32px;
+        width: 18rem;
+        outline: none;
+        border: 0.1px solid lightgray;
+        border-top-left-radius: 999px;
+        border-bottom-left-radius: 999px;
+        border-right-width: 0;
+        padding-left: 1rem;
+      }
+
+      .search-icon-div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #ffd701;
+        height: 32px;
+        width: 56px;
+        border: 0.1px solid lightgray;
+        border-top-right-radius: 999px;
+        border-bottom-right-radius: 999px;
+        border-left-width: 0;
+      }
+    }
+
+    .options-div {
+      display: flex;
+
+      & > div {
+        height: 40px;
+        width: 40px;
+        margin: 6px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 0.1px solid gray;
+        border-radius: 999px;
+        overflow: hidden;
+
+        mat-icon {
+          font-size: 24px;
+        }
+      }
+    }
+  }
+}
+.main-content{
+  min-height: calc(100%);
 }
 
 footer {
+  width: 100%;
+  height: 250px;
+  background-color: base.$black;
+
+  .more {
+    list-style-type: none;
     width: 100%;
-    height: 250px;
-    background-color: base.$black;
-    margin-top: 16px;
+    height: 100%;
+    display: flex;
+    justify-content: space-evenly;
 
-    .more {
-        list-style-type: none;
-        width: 100%;
-        height: 100%;
+    .pages,
+    .about-us {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      h2 {
+        color: white;
+      }
+      ul {
         display: flex;
-        justify-content: space-evenly;
-
-        .pages, .about-us {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-evenly;
-            h2 {
-                color: white;
-            }
-            ul{
-                display: flex;
-                flex-direction: column;
-                height: 60%;
-                justify-content: space-between;
-                a{
-                    color: gray;
-                    text-decoration: none;
-                    &:hover{
-                        color: base.$yellow;
-                    }
-                }
-            }
+        flex-direction: column;
+        height: 60%;
+        justify-content: space-between;
+        a {
+          color: gray;
+          text-decoration: none;
+          &:hover {
+            color: base.$yellow;
+          }
         }
+      }
     }
+  }
 }
 
-
 @media (max-width: 599px) {
-    header {
-        mat-toolbar {
-            display: flex;
-            width: 100%;
+  header {
+    mat-toolbar {
+      display: flex;
+      width: 100%;
 
-            justify-content: space-between;
-            padding-left: base.$mobile_padding;
-            padding-right: base.$mobile_padding;
+      justify-content: space-between;
+      padding-left: base.$mobile_padding;
+      padding-right: base.$mobile_padding;
 
-            div {
-                .menu-a {
-                    display: inherit;
-                }
-
-                .logo-div {
-                    height: 50px;
-                    width: 50px;
-                    overflow: hidden;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-
-                    .logo-img {
-                        height: 90%;
-                        width: 90%;
-                        object-fit: contain;
-                    }
-                }
-            }
-
-            .search-div {
-                display: none;
-                justify-content: center;
-                align-items: center;
-
-                &>input {
-                    height: 32px;
-                    width: 18rem;
-                    outline: none;
-                    border: 0.1px solid lightgray;
-                    border-top-left-radius: 999px;
-                    border-bottom-left-radius: 999px;
-                    border-right-width: 0;
-                    padding-left: 1rem;
-                }
-
-                .search-icon-div {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    background-color: #FFD701;
-                    height: 32px;
-                    width: 56px;
-                    border: 0.1px solid lightgray;
-                    border-top-right-radius: 999px;
-                    border-bottom-right-radius: 999px;
-                    border-left-width: 0;
-                }
-            }
-
-            .options-div {
-                display: flex;
-
-                &>div {
-                    height: 40px;
-                    width: 40px;
-                    margin: 6px;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    border: 0.1px solid gray;
-                    border-radius: 999px;
-                    overflow: hidden;
-
-                    mat-icon {
-                        font-size: 24px;
-                    }
-                }
-            }
+      div {
+        .menu-a {
+          display: inherit;
         }
 
-        .navigator {
-            position: fixed;
-            height: calc(100% - 56px);
-            width: 100%;
-            left: -100%;
+        .logo-div {
+          height: 50px;
+          width: 50px;
+          overflow: hidden;
+          display: flex;
+          justify-content: center;
+          align-items: center;
 
-            &.opened-nav {
-                left: 0;
-                animation: open;
-                animation-duration: 500ms;
-            }
+          .logo-img {
+            height: 90%;
+            width: 90%;
+            object-fit: contain;
+          }
+        }
+      }
 
-            &:not(.opened-nav) {
-                left: -100%;
-                animation: close;
-                animation-duration: 500ms;
-            }
+      .search-div {
+        display: none;
+        justify-content: center;
+        align-items: center;
+
+        & > input {
+          height: 32px;
+          width: 18rem;
+          outline: none;
+          border: 0.1px solid lightgray;
+          border-top-left-radius: 999px;
+          border-bottom-left-radius: 999px;
+          border-right-width: 0;
+          padding-left: 1rem;
         }
 
-        .background {
-            &.show-background {
-                height: calc(100% - 56px);
-                width: 100%;
-                background-color: black;
-                position: fixed;
-                opacity: 0.5;
-                animation: show;
-                animation-duration: 500ms;
-            }
-
-            &:not(.show-background) {
-                height: calc(100% - 56px);
-                width: 100%;
-                background-color: black;
-                position: absolute;
-                opacity: 0;
-                animation: hide;
-                animation-duration: 500ms;
-            }
+        .search-icon-div {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background-color: #ffd701;
+          height: 32px;
+          width: 56px;
+          border: 0.1px solid lightgray;
+          border-top-right-radius: 999px;
+          border-bottom-right-radius: 999px;
+          border-left-width: 0;
         }
+      }
 
+      .options-div {
+        display: flex;
 
-        @keyframes open {
-            from {
-                left: -100%;
-            }
+        & > div {
+          height: 40px;
+          width: 40px;
+          margin: 6px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          border: 0.1px solid gray;
+          border-radius: 999px;
+          overflow: hidden;
 
-            to {
-                left: 0;
-            }
+          mat-icon {
+            font-size: 24px;
+          }
         }
-
-        @keyframes close {
-            from {
-                left: 0;
-            }
-
-            to {
-                left: -100%;
-            }
-        }
-
-        @keyframes show {
-            from {
-                opacity: 0;
-            }
-
-            to {
-                opacity: 0.5;
-            }
-        }
-
-        @keyframes hide {
-            from {
-                opacity: 0.5;
-            }
-
-            to {
-                opacity: 0;
-            }
-        }
+      }
     }
+
+    .navigator {
+      position: fixed;
+      height: calc(100% - 56px);
+      width: 100%;
+      left: -100%;
+
+      &.opened-nav {
+        left: 0;
+        animation: open;
+        animation-duration: 500ms;
+      }
+
+      &:not(.opened-nav) {
+        left: -100%;
+        animation: close;
+        animation-duration: 500ms;
+      }
+    }
+
+    @keyframes open {
+      from {
+        left: -100%;
+      }
+
+      to {
+        left: 0;
+      }
+    }
+
+    @keyframes close {
+      from {
+        left: 0;
+      }
+
+      to {
+        left: -100%;
+      }
+    }
+
+    @keyframes show {
+      from {
+        opacity: 0;
+      }
+
+      to {
+        opacity: 0.5;
+      }
+    }
+
+    @keyframes hide {
+      from {
+        opacity: 0.5;
+      }
+
+      to {
+        opacity: 0;
+      }
+    }
+  }
+  .main-content{
+    min-height: calc(100% - 56px - 250px);
+  }
 }
