--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,20 +1,60 @@
 <nav class="nav-menu">
-    <div class="home">
-        <a style="display: flex; justify-content: start; align-items: center; padding: 16px;" routerLink="home"
-            routerLinkActive="active">
-            <mat-icon class="home-icon material-symbols-outlined" fontIcon="home"></mat-icon>
-            <p>Home</p>
-        </a>
-    </div>
+  <div class="home">
+    <a
+      style="
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        padding: 16px;
+      "
+      (click)="clickOnCategories()"
+    >
+      <mat-icon
+        class="home-icon material-symbols-outlined"
+        fontIcon="menu"
+      ></mat-icon>
+      <p>All Categories</p>
+    </a>
 
-
-    <ul class="menu-list">
-        <li style="padding: 16px; cursor: pointer;"><a style="cursor: pointer;" routerLink="shop" id="shop"
-                routerLinkActive="active" (click)="click(1)">Shop</a></li>
+    <ul class="categories-nav" [ngClass]="categoriesClicked ? 'clicked' : ''">
+      @for (item of categories; track $index) {
+      <li>
+        <a (click)="goToCategory($index)">{{ item }}</a>
+      </li>
+      }
     </ul>
-    <div class="free-div">
-        <p>*Free Shipping On Orders <span style="color: red;">+{{ 500 | currency :'USD' : 'symbol' :
-                '1.0-0'}}</span></p>
-    </div>
+  </div>
 
+  <ul class="menu-list">
+    <li style="padding: 16px">
+      <a
+        style="cursor: pointer"
+        id="home"
+        routerLink="/"
+        routerLinkActive="active"
+        (click)="select(0)"
+        [ngClass]="currentMenuItem === 0 ? 'selected' : ''"
+        >Home</a
+      >
+    </li>
+    <li style="padding: 16px">
+      <a
+        style="cursor: pointer"
+        id="shop"
+        [routerLink]="'/shop/' + categories[0]"
+        routerLinkActive="active"
+        (click)="select(1)"
+        [ngClass]="currentMenuItem === 1 ? 'selected' : ''"
+        >Shop</a
+      >
+    </li>
+  </ul>
+  <div class="free-div">
+    <p>
+      *Free Shipping On Orders
+      <span style="color: red"
+        >+{{ 500 | currency : "USD" : "symbol" : "1.0-0" }}</span
+      >
+    </p>
+  </div>
 </nav>
