--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -1,119 +1,155 @@
-@use '../../base' as base;
+@use "../../base" as base;
 
 .nav-menu {
-    background-color: #1E1E1E;
-    width: 100%;
-    height: 40px;
+  background-color: #1e1e1e;
+  width: 100%;
+  height: 40px;
+  display: flex;
+  justify-content: space-between;
+  color: #ffffff;
+  padding-left: base.$padding;
+  padding-right: base.$padding;
+  a {
+    all: unset;
+  }
+
+  .menu-list {
+    list-style-type: none;
     display: flex;
-    justify-content: space-between;
-    color: #FFFFFF;
-    padding-left: base.$padding;
-    padding-right: base.$padding;
-    a {
-        all: unset;
+    flex-basis: 40%;
+    justify-content: space-evenly;
+    align-items: center;
+
+    li {
+      a {
+        color: #ffd701;
+        &:not(.selected) {
+          color: white;
+        }
+      }
     }
+  }
+
+  .home {
+    background-color: #ffd701;
+    color: #1e1e1e;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 12px;
+    padding-right: 12px;
+    position: relative;
+    cursor: pointer;
+    &:hover {
+      .categories-nav {
+        display: flex;
+      }
+    }
+    .categories-nav {
+      width: 100%;
+      display: none;
+      position: absolute;
+      top: 100%;
+      list-style: none;
+      background-color: white;
+      justify-content: center;
+      flex-direction: column;
+      animation-name: animate-categories;
+      animation-duration: 700ms;
+      li{
+        padding: 16px;
+        height: 56px;
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        &:hover{
+          background-color: lightgray;
+        }
+      }
+    }
+  }
+
+  .free-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: clamp(1.1vw, 1.2vw, 1.3vw);
+  }
+
+  .background {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 599px) {
+  .nav-menu {
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    padding-left: 0;
+    padding-right: 0;
+    background-color: white;
 
     .menu-list {
-        list-style-type: none;
-        display: flex;
-        flex-basis: 40%;
-        justify-content: space-evenly;
-        align-items: center;
+      width: 100%;
+      flex-basis: 0;
+      flex-direction: column;
+      background-color: white;
+      align-items: start;
+      color: #1e1e1e;
 
+      li {
         a {
-            color: #FFD701;
+          color: base.$black;
 
-            &:not(.clicked) {
-                color: white;
-            }
+          &:not(.selected) {
+            color: base.$black;
+          }
         }
+      }
     }
 
     .home {
-        background-color: #FFD701;
-        color: #1E1E1E;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding-left: 12px;
-        padding-right: 12px;
-        position: relative;
-        cursor: pointer;
+      width: 100%;
+      background-color: white;
+      color: #1e1e1e;
+      display: flex;
+      flex-direction: column;
+      justify-content: start;
+      align-items: start;
+      padding-left: 0;
+      padding-right: 0;
+      cursor: pointer;
 
+      .categories-nav {
+        display: flex;
+        position: static;
+        li{
+          padding: 16px 32px;
+        }
+      }
+
+      .categories-nav:not(.clicked) {
+        display: none;
+      }
     }
 
     .free-div {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: clamp(1.1vw, 1.2vw, 1.3vw);
+      display: none;
     }
-
-    .background {
-        display: none;
-    }
-}
-
-
-@media only screen and (max-width: 599px) {
-
-    .nav-menu {
-        width: 100%;
-        height: 100%;
-        flex-direction: column;
-        justify-content: start;
-        align-items: start;
-        padding-left: 0;
-        padding-right: 0;
-        background-color: white;
-
-        .menu-list {
-            width: 100%;
-            flex-basis: 0;
-            flex-direction: column;
-            background-color: white;
-            align-items: start;
-            color: #1E1E1E;
-
-            a {
-                color: base.$black;
-
-                &:not(.clicked) {
-                    color: base.$black;
-                }
-            }
-        }
-
-        .home {
-            width: 100%;
-            background-color: white;
-            color: #1E1E1E;
-            display: flex;
-            flex-direction: column;
-            justify-content: start;
-            align-items: start;
-            padding-left: 0;
-            padding-right: 0;
-            cursor: pointer;
-
-
-
-        }
-
-        .free-div {
-            display: none;
-        }
-    }
-
-
+  }
 }
 
 @keyframes animate-categories {
-    from {
-        height: 0;
-    }
+  from {
+    height: 0;
+    opacity: 0;
+  }
 
-    to {
-        height: 280px;
-    }
+  to {
+    height: 280px;
+    opacity: 1;
+  }
 }
