--- a/src/app/shop/products/products.component.scss
+++ b/src/app/shop/products/products.component.scss
@@ -2,16 +2,22 @@
     display: grid;
     width: 100%;
     grid-template-columns: repeat(4, 1fr);
-    gap: 2%;
+    grid-auto-flow: row;
     margin-top: 16px;
+    gap: 2%;
     li {
         width: 100%;
+        height: 96%;
         align-content: center;
-
         p {
             text-align: center;
             padding: 16px;
         }
+    }
+
+    li.no-product{
+        grid-column-start: 1;
+        grid-column-end: 5;
     }
 
 }
@@ -33,6 +39,5 @@
 @media only screen and (max-width: 599px) {
     .products {
         grid-template-columns: 1fr;
-
     }
 }
