Removed overflow from list of products at shop component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,6 +32,8 @@
         <div style="cursor: pointer" (click)="navigateToAddProduct()">
           <mat-icon class="material-symbols-outlined" fontIcon="add"></mat-icon>
         </div>
+
+        } @if(userType !== null && userTokenValidation){
         <div
           style="cursor: pointer"
           routerLink="/cart"
