--- a/src/app/auth/signup/signup.component.scss
+++ b/src/app/auth/signup/signup.component.scss
@@ -3,7 +3,7 @@
 .signup-div {
     padding-left: base.$padding;
     padding-right: base.$padding;
-    height: 600px;
+    height: 80vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
