--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,88 +1,88 @@
 <header>
-    <p>Cart</p>
+  <p>Cart</p>
 </header>
 <div class="cart-div">
-    <mat-stepper [disableRipple]="true" [linear]="true">
-        <mat-step editable>
-            <ng-template matStepLabel>Shopping Cart</ng-template>
-            <div class="products-panel">
-                <div class="products">
-                    <table>
-                        <tr>
-                            <th></th>
-                            <th class="product-details">Product Details</th>
-                            <th>Price</th>
-                            <th>Quantity</th>
-                            <th>Subtotal</th>
-                        </tr>
-                        @for (item of products; track $index) {
-                        <tr>
-                            <td><img [src]="item.productImageUrlOne" /></td>
-                            <td>
-                                <p class="product-title">{{ item.productTitle }}</p>
-                            </td>
-                            <td>{{ item.productPrice | currency }}</td>
-                            <td class="product-quantity"><button (click)="remove($index)"><mat-icon
-                                        fontIcon="remove"></mat-icon></button>
-                                <p>{{ item.productQuantity }}</p><button class="plus" (click)="add($index)"><mat-icon
-                                        fontIcon="add"></mat-icon></button>
-                            </td>
-                            <td>{{ item.productPrice * item.productQuantity | currency }}</td>
-                        </tr>
-                        }@empty {
-                        <tr>
-                            <td>
-                                <p>No Products On Your Shop Cart</p>
-                            </td>
-                        </tr>
-                        }
-                    </table>
-                </div>
-                <div class="total">
-                    <div>
-                        <h2>Total Cart</h2>
-                        <output>Total: {{ total | currency }}</output>
-                    </div>
-                    <button class="checkout-btn" matStepperNext>Checkout</button>
-                </div>
-            </div>
+  <mat-stepper [disableRipple]="true" [linear]="true">
+    <mat-step editable>
+      <ng-template matStepLabel>Shopping Cart</ng-template>
+      <div class="products-panel">
+        <div class="products">
+          <table>
+            <tr>
+              <th></th>
+              <th class="product-details">Product Details</th>
+              <th>Price</th>
+              <th>Quantity</th>
+              <th>Subtotal</th>
+            </tr>
+            @for (item of products; track $index) {
+            <tr>
+              <td><img [src]="item.productImageUrlOne" /></td>
+              <td>
+                <p class="product-title">{{ item.productTitle }}</p>
+              </td>
+              <td>{{ item.productPrice | currency }}</td>
+              <td class="product-quantity">
+                <button (click)="remove($index)">
+                  <mat-icon fontIcon="remove"></mat-icon>
+                </button>
+                <p>{{ item.productQuantity }}</p>
+                <button class="plus" (click)="add($index)">
+                  <mat-icon fontIcon="add"></mat-icon>
+                </button>
+              </td>
+              <td>{{ item.productPrice * item.productQuantity | currency }}</td>
+            </tr>
+            }@empty {
+            <tr>
+              <td>
+                <p>No Products On Your Shop Cart</p>
+              </td>
+            </tr>
+            }
+          </table>
+        </div>
+        <div class="total">
+          <div>
+            <h2>Total Cart</h2>
+            <output>Total: {{ total | currency }}</output>
+          </div>
+          <button class="remove-btn" (click)="removeAll()">Remove All</button>
+          <button class="checkout-btn" matStepperNext>Checkout</button>
+        </div>
+      </div>
+    </mat-step>
+    <mat-step editable [stepControl]="infosGroup">
+      <ng-template matStepLabel>Shipping & Checkout</ng-template>
+      <form class="shipping" [formGroup]="infosGroup">
+        <label> Full Name </label>
+        <input formControlName="fullName" placeholder="Full Name" />
 
-        </mat-step>
-        <mat-step editable [stepControl]="infosGroup">
-            <ng-template matStepLabel>Shipping & Checkout</ng-template>
-            <form class="shipping" [formGroup]="infosGroup">
-                <label>
-                    Full Name
-                </label>
-                <input formControlName="fullName" placeholder="Full Name" />
-
-                <label style="margin-top: 16px;">
-                    Address
-                </label>
-                <input formControlName="address" placeholder="Address" />
-                <button class="continue-btn" matStepperNext>Continue</button>
-            </form>
-        </mat-step>
-        <mat-step editable>
-            <ng-template matStepLabel>Confirmation</ng-template>
-            <ul class="confirmation-ul">
-                <li>
-                    <div class="checked-icn">
-                        <mat-icon fontIcon="checked"></mat-icon>
-                    </div>
-                    <h3>Your order has been fulfilled</h3>
-                    <p style="color: gray;">I'm grateful. We have received your order.</p>
-                </li>
-                <li>
-                    <h3>Order Details</h3>
-                    <p style="font-weight: bold; margin-top: 24px;">Total:</p>
-                    <p>{{ total | currency}}</p>
-                    <p style="font-weight: bold; margin-top: 16px;">Full Name:</p>
-                    <p>{{ infosGroup.value.fullName }}</p>
-                    <p style="font-weight: bold; margin-top: 16px;">Address:</p>
-                    <p>{{ infosGroup.value.address }}</p>
-                </li>
-            </ul>
-        </mat-step>
-    </mat-stepper>
+        <label style="margin-top: 16px"> Address </label>
+        <input formControlName="address" placeholder="Address" />
+        <button class="continue-btn" matStepperNext>Continue</button>
+      </form>
+    </mat-step>
+    <mat-step editable>
+      <ng-template matStepLabel>Confirmation</ng-template>
+      <ul class="confirmation-ul">
+        <li>
+          <div class="checked-icn">
+            <mat-icon fontIcon="checked"></mat-icon>
+          </div>
+          <h3>Your order has been fulfilled</h3>
+          <p style="color: gray">I'm grateful. We have received your order.</p>
+        </li>
+        <li>
+          <h3>Order Details</h3>
+          <p style="font-weight: bold; margin-top: 24px">Total:</p>
+          <p>{{ total | currency }}</p>
+          <p style="font-weight: bold; margin-top: 16px">Full Name:</p>
+          <p>{{ infosGroup.value.fullName }}</p>
+          <p style="font-weight: bold; margin-top: 16px">Address:</p>
+          <p>{{ infosGroup.value.address }}</p>
+        </li>
+      </ul>
+    </mat-step>
+  </mat-stepper>
 </div>
