--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -1,178 +1,176 @@
-@use '../../base' as base;
+@use "../../base" as base;
 
 header {
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    padding: 24px;
-    p {
-        font-size: 2rem;
-    }
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding: 24px;
+  p {
+    font-size: 2rem;
+  }
 }
 
-
 .cart-div {
-    --mat-stepper-container-color: transparent;
-    padding: 0 base.$padding;
-    
-    .checkout-btn,
-    .continue-btn {
-        background-color: base.$yellow;
-        width: 100%;
-        height: 40px;
-        border-width: 0;
-        border-radius: 6px;
-        cursor: pointer;
-        margin-top: 16px;
-    }
+  --mat-stepper-container-color: transparent;
+  padding: 0 base.$padding;
 
-    .products-panel {
-        display: flex;
-        gap: 2%;
+  .remove-btn {
+    background-color: white;
+    border: 1px solid base.$black;
+    border-radius: 6px;
+    height: 40px;
+    cursor: pointer;
+  }
 
-        .products {
-            flex-basis: 74%;
-            width: 74%;
-            background-color: white;
-            border-radius: 8px;
-            padding: 16px;
+  .checkout-btn,
+  .continue-btn {
+    background-color: base.$yellow;
+    width: 100%;
+    height: 40px;
+    border-width: 0;
+    border-radius: 6px;
+    cursor: pointer;
+    margin-top: 16px;
+  }
 
+  .products-panel {
+    display: flex;
+    gap: 2%;
 
+    .products {
+      flex-basis: 74%;
+      width: 74%;
+      background-color: white;
+      border-radius: 8px;
+      padding: 16px;
 
-            tr {
-                th {
-                    padding: 16px;
-                }
-
-                .product-details {
-                    width: 50%;
-                }
-
-                td {
-                    img {
-                        display: inline;
-                        height: 50px;
-                        width: 50px;
-                        object-fit: contain;
-                    }
-                }
-
-                .product-title {
-                    display: -webkit-box;
-                    font-weight: 500;
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-                    -webkit-line-clamp: 1;
-                    -webkit-box-orient: vertical;
-                }
-
-                .product-quantity {
-                    display: flex;
-                    justify-content: space-around;
-                    align-items: center;
-                    padding: 16px 0px;
-
-                    button {
-                        border-radius: 999px;
-                        border-width: 0;
-                        height: 32px;
-                        width: 32px;
-                        padding: 4px;
-                        background-color: base.$black;
-                        color: white;
-                        cursor: pointer;
-                    }
-
-                }
-            }
+      tr {
+        th {
+          padding: 16px;
         }
 
-        .total {
-            flex-basis: 24%;
-            width: 24%;
-            background-color: white;
-            border-radius: 6px;
-            padding: 16px;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-
+        .product-details {
+          width: 50%;
         }
-    }
 
+        td {
+          img {
+            display: inline;
+            height: 50px;
+            width: 50px;
+            object-fit: contain;
+          }
+        }
 
+        .product-title {
+          display: -webkit-box;
+          font-weight: 500;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          -webkit-line-clamp: 1;
+          -webkit-box-orient: vertical;
+        }
 
-    .shipping {
-        display: flex;
-        flex-direction: column;
+        .product-quantity {
+          display: flex;
+          justify-content: space-around;
+          align-items: center;
+          padding: 16px 0px;
 
-        input {
-            height: 40px;
-            outline-width: 0;
-            border: none;
+          button {
             border-radius: 999px;
-            padding-left: 12px;
-            margin-top: 6px;
+            border-width: 0;
+            height: 32px;
+            width: 32px;
+            padding: 4px;
+            background-color: base.$black;
+            color: white;
+            cursor: pointer;
+          }
         }
-
-
+      }
     }
 
-    .confirmation-ul {
+    .total {
+      flex-basis: 24%;
+      width: 24%;
+      background-color: white;
+      border-radius: 6px;
+      padding: 16px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+  }
+
+  .shipping {
+    display: flex;
+    flex-direction: column;
+
+    input {
+      height: 40px;
+      outline-width: 0;
+      border: none;
+      border-radius: 999px;
+      padding-left: 12px;
+      margin-top: 6px;
+    }
+  }
+
+  .confirmation-ul {
+    display: flex;
+    flex-direction: column;
+    list-style-type: none;
+    li {
+      background-color: white;
+      border-radius: 8px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 16px 16px 8px 16px;
+      margin-top: 16px;
+      .checked-icn {
+        border-radius: 999px;
+        background-color: green;
         display: flex;
-        flex-direction: column;
-        list-style-type: none;
-        li {
-            background-color: white;
-            border-radius: 8px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 16px 16px 8px 16px;
-            margin-top: 16px;
-            .checked-icn {
-                border-radius: 999px;
-                background-color: green;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                color: white;
-                width: 60px;
-                height: 60px;
-
-            }
-            h3, p{
-                width: 100%;
-            }
-            p{
-                margin-top: 8px;
-            }
-        }
+        align-items: center;
+        justify-content: center;
+        color: white;
+        width: 60px;
+        height: 60px;
+      }
+      h3,
+      p {
+        width: 100%;
+      }
+      p {
+        margin-top: 8px;
+      }
     }
+  }
 }
 
 @media only screen and (max-width: 845px) {
-    .cart-div {
-        padding: 0px base.$mobile_padding;
+  .cart-div {
+    padding: 0px base.$mobile_padding;
 
-        .products-panel {
-            flex-direction: column;
+    .products-panel {
+      flex-direction: column;
 
-            .products {
-                width: 100%;
-                overflow: scroll;
-            }
+      .products {
+        width: 100%;
+        overflow: scroll;
+      }
 
-            .total {
-                width: 100%;
-                margin-top: 12px;
+      .total {
+        width: 100%;
+        margin-top: 12px;
 
-                .checkout-btn {
-                    margin-top: 12px;
-                }
-            }
+        .checkout-btn {
+          margin-top: 12px;
         }
-
+      }
     }
+  }
 }
