--- a/src/app/shop/products/products.component.scss
+++ b/src/app/shop/products/products.component.scss
@@ -1,43 +1,40 @@
 .products {
-    display: grid;
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-flow: row;
+  margin-top: 16px;
+  grid-auto-rows: calc(410px - 2%);
+  gap: 2%;
+  li {
     width: 100%;
-    grid-template-columns: repeat(4, 1fr);
-    grid-auto-flow: row;
-    margin-top: 16px;
-    gap: 2%;
-    li {
-        width: 100%;
-        height: 96%;
-        align-content: center;
-        p {
-            text-align: center;
-            padding: 16px;
-        }
+    align-content: center;
+    p {
+      text-align: center;
+      padding: 16px;
     }
+  }
 
-    li.no-product{
-        grid-column-start: 1;
-        grid-column-end: 5;
-    }
-
+  li.no-product {
+    grid-column-start: 1;
+    grid-column-end: 5;
+  }
 }
 
-
-
 @media only screen and (max-width: 975px) {
-    .products {
-        grid-template-columns: repeat(3, 1fr);
-    }
+  .products {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 @media only screen and (max-width: 700px) {
-    .products {
-        grid-template-columns: repeat(2, 1fr);
-    }
+  .products {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 @media only screen and (max-width: 599px) {
-    .products {
-        grid-template-columns: 1fr;
-    }
+  .products {
+    grid-template-columns: 1fr;
+  }
 }
